# toolsvm

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
.github/workflows/: toolsvm-ci.yml
tests/: test_grid.py
toolsvm/: __init__.py  grid.py
