[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "toolsvm"
authors = [{name = "Kobajaski", email = "kobajaski@gmail.com"}]
dynamic = ["version", "description"]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "click",
    "libsvm-official",
    "ray",
    "py-gnuplot",
]

[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
    "pytest-cov",
]
doc = ["sphinx"]

[project.scripts]
gridsvm = "toolsvm.grid:main"
